# job-seeking

./: .gitignore  DESKTOP.md  PROJECT_PROGRESS.md  README.md  build-installer.cmd  configure-ai-key.cmd  configure-ai-key.ps1  desktop-build.cmd  desktop-dev.cmd  index.html  package-desktop.cmd  package-lock.json  package.json  vite.config.ts
release/: 使用说明.txt  测试反馈清单.txt
scripts/: check-desktop-release.mjs  check-version.mjs  fix-windows-subsystem.mjs
src/: App.tsx  ai.ts  aiResult.test.tsx  aiResult.tsx  analysis.ts  changelog.ts  data.ts  dataExport.test.ts  dataExport.ts  errors.test.ts  errors.ts  history.test.ts  history.ts  knowledge.ts  plans.ts  questions.test.tsx  questions.tsx  reportExport.test.ts  reportExport.ts  reports.test.ts  reports.ts  resumeImport.test.ts  resumeImport.ts  sampleData.test.ts  sampleData.ts  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
