[package]
name = "jobfit-assistant"
version = "0.1.3"
description = "Windows desktop prototype for job matching and resume optimization"
authors = ["Codex"]
edition = "2021"

[lib]
name = "jobfit_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = [] }
tauri-plugin-opener = "=2.5.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
